<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/text_brown"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/easyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_easy"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_medium"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/hardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_hard"/>

</LinearLayout>